Update LifecycleRegistry.java